--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "helmet": "^6.0.1",
     "log4js": "^6.9.1",
     "mongoose": "^7.0.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "yarn": "^1.22.19"
   }
 }
